plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'org.graalvm.buildtools.native' version '0.11.3'
}

group = 'com.wilhg'
version = '0.2.22'

application {
    mainClass = 'com.wilhg.lyocell.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview', '--enable-native-access=ALL-UNNAMED']
    useJUnitPlatform {
        // Skip Docker-backed integration tests when skipDockerTests=true (defaults to true)
        if (Boolean.parseBoolean(System.getProperty("skipDockerTests", "true"))) {
            excludeTags("integration")
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'tools.jackson.core:jackson-databind:3.0.3'
    implementation 'org.yaml:snakeyaml:2.5'

    // GraalVM Polyglot & JS
    implementation 'org.graalvm.polyglot:polyglot:25.0.1'
    implementation 'org.graalvm.polyglot:js:25.0.1'

    // Metrics
    implementation 'io.micrometer:micrometer-core:1.16.1'

    testImplementation platform('org.junit:junit-bom:6.0.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:testcontainers:2.0.3'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.3'
}

test {
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}

graalvmNative {
    binaries {
        main {
            imageName = 'lyocell'
            mainClass = 'com.wilhg.lyocell.Main'
            buildArgs.addAll(
                    '--verbose',
                    '-H:+UnlockExperimentalVMOptions',
                    '--no-fallback',
                    '-H:+ReportExceptionStackTraces',
                    '--enable-preview',
                    '--enable-native-access=ALL-UNNAMED',
                    '--enable-native-access=org.graalvm.truffle',

                    // Optimization flags
                    '-Os',                                    // Optimize for Size (was -O3)
                    '-march=native',                          // Optimize for current CPU

                    // Size optimizations
                    '-H:+RemoveUnusedSymbols',               // Strip unused symbols
                    '-H:+UseServiceLoaderFeature',           // Enable ServiceLoader

                    // Exclude ICU4J (Reduces size by ~15MB, disables JS Intl API)
                    '-Dpolyglot.js.intl-402=false',
                    '-H:+AddAllCharsets',                    // Ensure basic charsets are available

                    // Resource configuration
                    '-H:IncludeResources=.*\\.properties$',

                    // Performance monitoring
                    '-H:+PrintClassInitialization'
            )

            // JVM arguments for build process
            jvmArgs = [
            '-Xmx8g',
            '--enable-preview',
            ]
            useArgFile = false
        }
    }
    testSupport = true
}